adding first data for python module

--- a/notebooks/pydantic.ipynb
+++ b/notebooks/pydantic.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The president of Mexico is Andrés Manuel López Obrador.\n",
+      "Andrés Manuel López Obrador is the president of Mexico.\n",
       "\n"
      ]
     }
@@ -26,8 +26,30 @@
     ")\n",
     "\n",
     "result = agent.run_sync('who is the president of mexico?')  \n",
-    "print(result.data)\n",
-    "\n"
+    "print(result.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'genai' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m \u001b[43mgenai\u001b[49m\u001b[38;5;241m.\u001b[39mlist_models():\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgenerateContent\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m m\u001b[38;5;241m.\u001b[39msupported_generation_methods:\n\u001b[1;32m      3\u001b[0m         \u001b[38;5;28mprint\u001b[39m(m\u001b[38;5;241m.\u001b[39mname)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'genai' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for m in genai.list_models():\n",
+    "    if 'generateContent' in m.supported_generation_methods:\n",
+    "        print(m.name)"
    ]
   }
  ],
