--- a/notebooks/gemini.ipynb
+++ b/notebooks/gemini.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('print')"
+    "print(\"print\")"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "# Create a model instance\n",
     "import google.generativeai as genai\n",
     "\n",
-    "model = genai.GenerativeModel('gemini-1.5-flash')\n",
+    "model = genai.GenerativeModel(\"gemini-1.5-flash\")\n",
     "\n",
     "# Generate content based on a prompt\n",
     "response = model.generate_content(\"What are the benefits of using AI in healthcare?\")\n",
@@ -120,7 +120,7 @@
    ],
    "source": [
     "for m in genai.list_models():\n",
-    "    if 'generateContent' in m.supported_generation_methods:\n",
+    "    if \"generateContent\" in m.supported_generation_methods:\n",
     "        print(m.name)"
    ]
   }
