--- a/notebooks/image_generation.ipynb
+++ b/notebooks/image_generation.ipynb
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "print('Hello testing')"
+    "print(\"Hello testing\")"
    ]
   },
   {
@@ -23,12 +23,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sys import path\n",
     "import os\n",
+    "from sys import path\n",
     "\n",
-    "from IPython.display import Audio, Image\n",
+    "from IPython.display import Image\n",
     "\n",
-    "path.append(os.path.realpath('../'))"
+    "path.append(os.path.realpath(\"../\"))"
    ]
   },
   {
@@ -66,8 +66,8 @@
     }
    ],
    "source": [
-    "image = img_fal_service.generate_image_and_get_bytes('one girl with a teddy bear')\n",
-    "image\n"
+    "image = img_fal_service.generate_image_and_get_bytes(\"one girl with a teddy bear\")\n",
+    "image"
    ]
   },
   {
