--- a/notebooks/pydantic.ipynb
+++ b/notebooks/pydantic.ipynb
@@ -15,17 +15,17 @@
     }
    ],
    "source": [
-    "import asyncio\n",
-    "from pydantic_ai import Agent\n",
     "import nest_asyncio\n",
+    "from pydantic_ai import Agent\n",
+    "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "agent = Agent(  \n",
-    "    'gemini-1.5-flash',\n",
-    "    system_prompt='Be concise, reply with one sentence.',  \n",
+    "agent = Agent(\n",
+    "    \"gemini-1.5-flash\",\n",
+    "    system_prompt=\"Be concise, reply with one sentence.\",\n",
     ")\n",
     "\n",
-    "result = agent.run_sync('who is the president of mexico?')  \n",
+    "result = agent.run_sync(\"who is the president of mexico?\")\n",
     "print(result.data)"
    ]
   },
@@ -48,7 +48,7 @@
    ],
    "source": [
     "for m in genai.list_models():\n",
-    "    if 'generateContent' in m.supported_generation_methods:\n",
+    "    if \"generateContent\" in m.supported_generation_methods:\n",
     "        print(m.name)"
    ]
   }
