--- a/notebooks/trying.ipynb
+++ b/notebooks/trying.ipynb
@@ -18,9 +18,10 @@
     }
    ],
    "source": [
-    "from swarm import Swarm, Agent\n",
+    "from swarm import Agent, Swarm\n",
     "\n",
     "client = Swarm()\n",
+    "\n",
     "\n",
     "def transfer_to_agent_b():\n",
     "    return agent_b\n",
