--- a/notebooks/tts.ipynb
+++ b/notebooks/tts.ipynb
@@ -40,16 +40,16 @@
     }
    ],
    "source": [
-    "from sys import path\n",
     "import os\n",
+    "from sys import path\n",
     "\n",
     "from IPython.display import Audio\n",
     "\n",
-    "path.append(os.path.realpath('../'))\n",
+    "path.append(os.path.realpath(\"../\"))\n",
     "\n",
     "from app.tts import google_tts\n",
     "\n",
-    "audio = google_tts.get_speech('Hello, World!')\n",
+    "audio = google_tts.get_speech(\"Hello, World!\")\n",
     "\n",
     "Audio(audio[0])"
    ]
