--- a/notebooks/pydantic.ipynb
+++ b/notebooks/pydantic.ipynb
@@ -47,9 +47,9 @@
     }
    ],
    "source": [
-    "for m in genai.list_models():\n",
-    "    if \"generateContent\" in m.supported_generation_methods:\n",
-    "        print(m.name)"
+    "# for m in genai.list_models():\n",
+    "#     if \"generateContent\" in m.supported_generation_methods:\n",
+    "#         print(m.name)"
    ]
   }
  ],
