--- a/tools/tiktok_analizer/tiktok_downloader.ipynb
+++ b/tools/tiktok_analizer/tiktok_downloader.ipynb
@@ -41,9 +41,9 @@
     }
    ],
    "source": [
-    "from . import tiktok_downloader\n",
+    "# from . import tiktok_downloader\n",
     "\n",
-    "tiktok_downloader.log_retry('https://www.tiktok.com/@tiktok/video/7000000000000000000')"
+    "# tiktok_downloader.log_retry('https://www.tiktok.com/@tiktok/video/7000000000000000000')"
    ]
   }
  ],
